--- a/package.json
+++ b/package.json
@@ -6,23 +6,18 @@
 		"build": "vite build && npm run prepack",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
+		"postinstall": "prisma generate",
 		"prepack": "svelte-kit sync && svelte-package && publint",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"files": [
-
 		"dist",
-
 		"!dist/**/*.test.*",
-
 		"!dist/**/*.spec.*"
-
 	],
 	"sideEffects": [
-
 		"**/*.css"
-
 	],
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
